# O1

./: AddItemCommand.cpp  AddItemCommand.h  AddSlideCommand.cpp  AddSlideCommand.h  BoundingBox.h  CLIController.cpp  CLIController.h  CMakeLists.txt  Circle.h  Command.h  CommandFactory copy.h  CommandRegistrar.cpp  CommandRegistrar.h  Controller.h  DeleteSlideCommand.cpp  DeleteSlideCommand.h  Document.h  Editor.h  HelpCommand.cpp  HelpCommand.h  HistoryManager.cpp  HistoryManager.h  ImageItem.h  Item.h  MoveItemCommand.cpp  MoveItemCommand.h  ParsedCommand.h  Parser.cpp  Parser.h  Point.h  Rectangle.h  ResizeItemCommand.cpp  ResizeItemCommand.h  Shape.h  Slide.h  TextItem.h  a.out  main.cpp  mainwindow.cpp  mainwindow.h
